[package]
name = "avc_dmo"
version = "0.1.0"
authors = ["LL L <lll@xeltek-cn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "*"
maud = { version = "*", features = ["rocket"] }
rusqlite = { version = "*", features = ["bundled"]}
serde_json = "*"
serde = "*"
serde_derive = "*"
chrono = "*"
dirs = "*"
systray="0.4.0"
open="*"
tokio = "*"
hyper = "*"
futures = "*"
anyhow = "*"

[target.'cfg(windows)'.dependencies]
winapi = { version = "*", features = ["winuser", "synchapi"] }
